Add Evan Nemerson's blog.

--- a/config.ini
+++ b/config.ini
@@ -60,5 +60,8 @@ name = Jürg Billeter
 [http://valajournal.blogspot.com/feeds/posts/default]
 name = Luca Bruno
 
+[http://evan.nemerson.com/feed/]
+name = Evan Nemerson
+
 [http://manualgenie.blogspot.com/feeds/posts/default]
 name = Gontzal Uriarte
