--- a/config.ini
+++ b/config.ini
@@ -23,7 +23,7 @@ feed_timeout = 60
 # output_theme: "theme" of the output
 # output_dir: Directory to place output files
 # items_per_page: How many items to put on each page
-output_theme = classic_fancy
+output_theme = /home/nemequ/planet-vala/themes/planet_vala
 output_dir = /home/nemequ/planet.vala-project.org
 items_per_page = 60
 
