Assorted minor theme fixes.

--- a/themes/planet_vala/config.ini
+++ b/themes/planet_vala/config.ini
@@ -11,4 +11,8 @@ template_files:
   rss20.xml.tmpl
 
 template_directories:
-  /home/nemequ/venus/common
+  /home/nemequ/venus/themes/common
+
+bill_of_materials:
+	html-bg.png
+	feed-icon-14x14.png
