Add Steven Oliver's blog
Only posts tagged Vala

--- a/config.ini
+++ b/config.ini
@@ -65,3 +65,6 @@ name = Evan Nemerson
 
 [http://manualgenie.blogspot.com/feeds/posts/default]
 name = Gontzal Uriarte
+
+[https://blog-steveno.rhcloud.com/?tag=vala]
+name = Steven Oliver
