Add Jim Nelson's blog.

--- a/config.ini
+++ b/config.ini
@@ -68,3 +68,6 @@ name = Gontzal Uriarte
 
 [https://blog-steveno.rhcloud.com/?feed=rss2&tag=vala]
 name = Steven Oliver
+
+[http://blogs.gnome.org/jnelson/feed/?tag=vala]
+name = Jim Nelson
