Fix Vala Journal feed name. Add Luca Bruno with vala tag

--- a/config.ini
+++ b/config.ini
@@ -58,7 +58,7 @@ faceheight = 85
 name = Jürg Billeter
 
 [http://valajournal.blogspot.com/feeds/posts/default]
-name = Luca Bruno
+name = Vala Journal
 
 [http://evan.nemerson.com/feed/]
 name = Evan Nemerson
@@ -71,3 +71,6 @@ name = Steven Oliver
 
 [http://blogs.gnome.org/jnelson/feed/?tag=vala]
 name = Jim Nelson
+
+[http://lethalman.blogspot.com/feeds/posts/default/-/vala]
+name = Luca Bruno
