Add Philip Withnall.

--- a/config.ini
+++ b/config.ini
@@ -74,3 +74,6 @@ name = Jim Nelson
 
 [http://lethalman.blogspot.com/feeds/posts/default/-/vala]
 name = Luca Bruno
+
+[https://tecnocode.co.uk/tag/vala/feed/]
+name = Philip Withnall
