Add Robert Roth

--- a/config.ini
+++ b/config.ini
@@ -77,3 +77,6 @@ name = Luca Bruno
 
 [https://tecnocode.co.uk/tag/vala/feed/]
 name = Philip Withnall
+
+[http://curiositydrivendevelopment.blogspot.com/feeds/posts/default]
+name = Robert Roth
