--- a/config.ini
+++ b/config.ini
@@ -80,3 +80,6 @@ name = Philip Withnall
 
 [http://curiositydrivendevelopment.blogspot.com/feeds/posts/default]
 name = Robert Roth
+
+[http://blog.piechotka.com.pl/feed/]
+name = Maciej Piechotka
