Add Jesse van den Kieboom

--- a/config.ini
+++ b/config.ini
@@ -83,3 +83,6 @@ name = Robert Roth
 
 [http://blog.piechotka.com.pl/feed/]
 name = Maciej Piechotka
+
+[http://blogs.gnome.org/jessevdk/feed/]
+name = Jesse van den Kieboom
