added feed for chrisdaley.biz

--- a/config.ini
+++ b/config.ini
@@ -86,3 +86,6 @@ name = Maciej Piechotka
 
 [http://blogs.gnome.org/jessevdk/feed/]
 name = Jesse van den Kieboom
+
+[http://chrisdaley.biz/feeds/vala.atom.xml]
+name = Chris Daley
