I blog sometimes about Vala

--- a/config.ini
+++ b/config.ini
@@ -89,3 +89,6 @@ name = Jesse van den Kieboom
 
 [http://arteymix.github.io/feed.xml]
 name= Guillaume Poirier-Morency
+
+[http://desiderantesblog.wordpress.com/category/vala/feed/]
+name = Mario Daniel Ruiz Saavedra
